--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,4 +1,52 @@
-.Login {
-    background-color: brown;
-    color:cadetblue;
+.loginForm {
+    background-color: clear;
+    color: transparent;
+    font-family: 'Pathway Gothic One', sans-serif;
+    font-size: 200%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top:225px;
+    width:500px;
+    padding: 1em;
+    border: 5px solid #feda4a;
+    box-shadow:1px 1px 1px 1px #f8d95c;
+    border-radius: 1em;
+   
+}
+
+h1{
+    -webkit-text-stroke: 2px #feda4a;
+
+}
+
+.formLabels{
+    -webkit-text-stroke: 2px #feda4a;
+    font-size: larger;
+    font-weight: 900;
+}
+
+.formInputs{
+    background-color: rgb(32, 31, 31);
+    border: 2px solid #feda4a;
+    border-radius: .75em;
+    font-size: x-large;
+    outline: none;
+    text-align: center;
+
+}
+input[type=text] {
+    color:#feda4a;
+    -webkit-text-stroke:unset;
+}
+
+.formButton{
+    background-color: transparent;
+    color:#feda4a;
+    font-size: large;
+    border: 2px solid #feda4a;
+    border-radius: 1em;
+}
+
+.formButton:hover{
+    opacity: 70%;
 }
