--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -31,6 +31,7 @@ h1{
 .formInputs{
     background-color: rgb(32, 31, 31);
     border: 2px solid #feda4a;
+    color: #feda4a;
     border-radius: .75em;
     font-size: x-large;
     outline: none;
