--- a/src/components/Saber.css
+++ b/src/components/Saber.css
@@ -13,7 +13,7 @@
   }
   
   h4 {
-    background-color: rgb(238, 192, 192);
+    background-color: black;
     background-repeat: repeat;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -31,8 +31,9 @@
     margin: 0.5em;
   }
   
+  /* Need to rename this to target only saber css; it was effecting the login labels */
   label:not(.hilt) {
-    color: white;
+    /* color: white; */
     font-weight: bold;
     align-self: start;
   }
